adding support for updating a team
